--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,11 +3,8 @@ body {
     line-height: 1.6em; 
 }
 
-.center {
-    text-align: center;
-}
-
-.caption {
-    font-size: 90%;
-    color: #555;
+.twitter-tweet-rendered {
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
 }
