--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -8,7 +8,12 @@ body {
   margin-right: auto;
 }
 
-/* post */
+/* /post */
+.cover-img {
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .post-list {
   display: flex;
   flex-direction: column;
@@ -19,11 +24,6 @@ body {
   flex-direction: column;
   gap: 1.2rem;
   padding: 20px 0;
-
-  img {
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
 
   .title {
     font-size: 2.5rem !important;
